@@ -1,3 +1,15 @@
+1999-08-25  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Group/UKIRT.pm: Inherit from ORAC::Group::NDF
+
+	* Group/UFTI.pm: Inherit from ORAC::Group::NDF
+
+	* Group/JCMT.pm: Inherit from ORAC::Group::NDF
+
+	* Core.pm: Add support for -resume flag.
+
+	* Group.pm: Add support for coadds(), (inc file_exists and erase)
+
 1999-08-24  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Core.pm (orac_store_frm_in_correct_grp): Dont set raw()
